2013-09-04  Beth Dakin  <bdakin@apple.com>

        Fixing a typo in demo files and screenshot.

        * blog-files/regions/pizza-is-amazing.png: Replaced.
        * demos/regions/pizza-regions-manifesto-regionstyling.html:
        * demos/regions/pizza-regions-manifesto.html:

2013-09-04  Beth Dakin  <bdakin@apple.com>

        Upload demo and images for a potential blog post.

        * blog-files/regions: Added.
        * blog-files/regions/pizza-is-amazing.png: Added.
        * demos/regions: Added.
        * demos/regions/pizza-regions-manifesto-regionstyling.html: Added.
        * demos/regions/pizza-regions-manifesto.html: Added.
        * demos/regions/yellow-pizza.jpg: Added.

2013-09-03  Benjamin Poulain  <benjamin@webkit.org>

        Fix the recommended testing platform on the website

        Rubberstamped by Enrica Casucci.

        * quality/testing.html:

2013-08-08  Benjamin Poulain  <bpoulain@apple.com>

        Fix webkit.org content overflowing their content box

        Rubberstamped by Simon Fraser.

        More fixes to have webkit.org show properly on iPad and iPhone.

        * blog/wp-content/themes/webkit/header.php:
        Add the correct viewport width for the blog.

        * building/debug.html:
        * building/launch-debugger-vs2010-small.png: Added.
        * building/set-debugging-properties-vs2010-small.png: Added.
        Fix the images to make them fit in the page.

        * coding/adding-features.html:
        Using <pre> for the example of email just make it looks like our code examples.
        Change the source to use <blockquote> so that the text can reflow to the content box.
        * css/main.css:
        (.code, pre, tt, code):
        Scroll the content when it overflows the box for code and pre.

2013-08-08  Benjamin Poulain  <benjamin@webkit.org>

        Give a smaller viewport to webkit.org on devices

        Rubberstamped by Simon Fraser.
